add new reference
add new reference

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -121,3 +121,11 @@
   url          = {https://CRAN.R-project.org/package=kableExtra}
 }
 ", file = "references.bib")
+
+@techreport{parquet,
+  title = {Apache Parquet},
+  author = {Apache Software Foundation},
+  year = {2024},
+  url = {https://parquet.apache.org/},
+  institution = {Apache Software Foundation}
+}
